logs/aliyun-python-sdk-ft.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/aliyun_python_sdk_core-2.3.5.egg-info'...
Listing './lib/python3.5/site-packages/aliyun_python_sdk_ft-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/aliyunsdkcore'...
Listing './lib/python3.5/site-packages/aliyunsdkcore/acs_exception'...
Listing './lib/python3.5/site-packages/aliyunsdkcore/auth'...
Listing './lib/python3.5/site-packages/aliyunsdkcore/http'...
Compiling './lib/python3.5/site-packages/aliyunsdkcore/http/format_type.py'...
***   File "./lib/python3.5/site-packages/aliyunsdkcore/http/format_type.py", line 48
    print map_format_to_accept(XML)
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/aliyunsdkcore/profile'...
Compiling './lib/python3.5/site-packages/aliyunsdkcore/profile/region_provider.py'...
***   File "./lib/python3.5/site-packages/aliyunsdkcore/profile/region_provider.py", line 161
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/aliyunsdkcore/utils'...
Compiling './lib/python3.5/site-packages/aliyunsdkcore/utils/parameter_helper.py'...
***   File "./lib/python3.5/site-packages/aliyunsdkcore/utils/parameter_helper.py", line 65
    print get_uuid()
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/aliyunsdkft'...
Listing './lib/python3.5/site-packages/aliyunsdkft/request'...
Listing './lib/python3.5/site-packages/aliyunsdkft/request/v19990909'...
Listing './lib/python3.5/site-packages/aliyunsdkft/request/v20150101'...
Listing './lib/python3.5/site-packages/aliyunsdkft/request/v20150202'...
Compiling './lib/python3.5/site-packages/aliyunsdkft/request/v20150202/RoaDubboApiRequest.py'...
***   File "./lib/python3.5/site-packages/aliyunsdkft/request/v20150202/RoaDubboApiRequest.py", line 28
    def get_x-acs-success(self):
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
